# StreetScoreBackend

./: .dockerignore  .env  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.md  TOURNAMENT_API_README.md  render.yaml  task
migrations/: 20260514_players_user_unique.sql  20260525_password_reset_tokens.sql  20260526_players_matches_played_not_null.sql  20260527_match_lineup_and_stats.sql
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/config/: db.rs
src/handlers/: auth_handlers.rs  docs_handlers.rs  match_handlers.rs  match_lineup_handlers.rs  match_ops.rs  mod.rs  player_handler.rs  progress_handlers.rs  ranking_handlers.rs  team_handlers.rs  team_players.rs  team_tournament_handlers.rs  tournament_auth.rs  tournament_handlers.rs  tournament_match_handlers.rs  tournament_standing_handlers.rs
src/models/: match.rs  mod.rs  players.rs  progress.rs  team.rs  teamplayerregistry.rs  teamtournamentregistry.rs  tournament_match.rs  tournament_standing.rs  tournaments.rs  users.rs
src/routes/: match_management_routes.rs  match_routes.rs  mod.rs  player_routes.rs  progress_routes.rs  ranking_routes.rs  team_routes.rs  teamplayerroutes.rs  tournament_match_routes.rs  tournament_routes.rs  tournament_standing_routes.rs
