[package]
name = "cricscorebackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "derive"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
futures = "0.3"
dotenvy = "0.15"