[package]
name = "cricscorebackend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "derive", "chrono"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
futures = "0.3"
dotenvy = "0.15"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
